[package]
name = "lust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "repl"
path = "./src/repl/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.7.6"
pest_derive = "2.7.6"

[dev-dependencies]
pretty_assertions = "1.3.0"
